@@ -4,36 +4,32 @@
   "type": "object",
   "properties": {
     "netPremiumDSBMalePercentage": {
-      "description": "Net premium rate for daily sickness benefits for men. The net premium rate corresponds to the percentage of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer.",
-      "type": "number",
-      "multipleOf": 0.001
+      "description": "Net premium rate for daily sickness benefits for men. The net premium rate corresponds to the percentage of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer. Premium rates are always specified as a percentage in the format xxx.yyyyy. Note for insurers: A premium rate of 0.5‰ is displayed as 0.05%.",
+      "$ref": "../../../../Generics/v1.0.0/PercentageType.json"
     },
     "netPremiumDSBMaleAmount": {
       "description": "Net premium amount for daily sickness benefits for men. The net premium amount corresponds to the amount of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer.",
       "$ref": "../../../../Generics/v1.0.0/MonetaryAmountType.json"
     },
     "netPremiumDSBFemalePercentage": {
-      "description": "Net premium rate for daily sickness benefits for women. The net premium rate corresponds to the percentage of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer.",
-      "type": "number",
-      "multipleOf": 0.001
+      "description": "Net premium rate for daily sickness benefits for women. The net premium rate corresponds to the percentage of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer. Premium rates are always specified as a percentage in the format xxx.yyyyy. Note for insurers: A premium rate of 0.5‰ is displayed as 0.05%.",
+      "$ref": "../../../../Generics/v1.0.0/PercentageType.json"
     },
     "netPremiumDSBFemaleAmount": {
       "description": "Net premium amount for daily sickness benefits for women. The net premium amount corresponds to the amount of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer.",
       "$ref": "../../../../Generics/v1.0.0/MonetaryAmountType.json"
     },
     "netPremiumDSBMPercentage": {
-      "description": "Net premium rate for maternity benefits. The net premium rate corresponds to the percentage of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer. Must be set if requested in the offer request.",
-      "type": "number",
-      "multipleOf": 0.001
+      "description": "Net premium rate for maternity benefits. The net premium rate corresponds to the percentage of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer. Must be set if requested in the offer request. Premium rates are always specified as a percentage in the format xxx.yyyyy. Note for insurers: A premium rate of 0.5‰ is displayed as 0.05%.",
+      "$ref": "../../../../Generics/v1.0.0/PercentageType.json"
     },
     "netPremiumDSBMAmount": {
       "description": "Net premium amount for maternity benefits. The net premium amount corresponds to the amount of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer. Must be set if requested in the offer request.",
       "$ref": "../../../../Generics/v1.0.0/MonetaryAmountType.json"
     },
     "netPremiumDSBPPercentage": {
-      "description": "Net premium rate for paternity benefits. The net premium rate corresponds to the percentage of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer. Must be set if requested in the offer request.",
-      "type": "number",
-      "multipleOf": 0.001
+      "description": "Net premium rate for paternity benefits. The net premium rate corresponds to the percentage of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer. Must be set if requested in the offer request. Premium rates are always specified as a percentage in the format xxx.yyyyy. Note for insurers: A premium rate of 0.5‰ is displayed as 0.05%.",
+      "$ref": "../../../../Generics/v1.0.0/PercentageType.json"
     },
     "netPremiumDSBPAmount": {
       "description": "Net premium amount for paternity benefits. The net premium amount corresponds to the amount of the net premium offered after deducting any discounts (combination discounts, payroll discounts, etc.), but without surcharges for fixed premium components. The net premium includes any final fee, brokerage fee, taxes and duties. Corresponds to the premium charged to the customer. Must be set if requested in the offer request.",
