@@ -3,8 +3,9 @@
     - Added new enum value "Other person mentioned by name"
 - DSBPersonGroupsType (Changed)
     - removed properties "averageAgeMale" and "averageAgeFemale" (moved to OfferRequestDSBTye and OfferDSBType)
-- DSBPremiumType
+- DSBPremiumType (Changed)
     - Properties "netPremiumDSBMPercentage", "netPremiumDSBMAmount", "netPremiumDSBPPercentage", "netPremiumDSBPAmount" are no longer mandatory
+    - changed type of "netPremiumDSBMalePercentage", "netPremiumDSBFemalePercentage", "netPremiumDSBMPercentage", "netPremiumDSBPPercentage" to percentageType.
 - OfferDSBType (Changed)
     - added properties "averageAgeMale" and "averageAgeFemale" (moved from DSBPersonGroupsType)
 - OfferRequestDSBType (Changed)
